@@ -6,6 +6,7 @@ dev     2017/xx/xx
       - removed support for Python 3.3
       - CI: build the documentation
       - doc: improvements and fixes (fix #37)
+      - MSS: possibility to get the whole PNG raw bytes
 
 3.1.1   2017/11/27
       - MSS: add the 'mss' entry point
